--- a/jquery/ajax.html
+++ b/jquery/ajax.html
@@ -11,7 +11,8 @@
 
 
 </div>
-<!--data yug api :3Nh47mAJgycXYguXlEen9GGnYEe2vNkne2J  -->
+<!--data yug api :3Nh47mAJgycXYguXlEen9GGnYEe2vNkne2J
+https://price-api.datayuge.com/ dashboard  -->
 <!-- https://price-api.datayuge.com/docs/?javascript#price-comparison-api   -->
 <!--    -->
 
