--- a/jquery/start.html
+++ b/jquery/start.html
@@ -2,7 +2,7 @@
 <head>
     <meta charset="utf-8">
     <title>My First jQuery Application</title>
-    <script src="https://code.jquery.com/jquery-3.5.1.min.js">
+    <script src="https://code.jquery.com/jquery-3.5.1.min.js"> <!-- including jquery extenaly from google cdn content delivery network -->
     </script>
 </head>
 <body>
